Fix: put course boxes exactly at the center when viewed on mobile device

--- a/index.css
+++ b/index.css
@@ -828,6 +828,8 @@ h1 {
         display: block;
         width: 80%;
         height: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #gallery {
